fix: right-alignment caret solution

--- a/src/Components/MaintenancePanel/JobsTable/JobsTable.css
+++ b/src/Components/MaintenancePanel/JobsTable/JobsTable.css
@@ -4,23 +4,24 @@
 
 .table-wrapper .jobs-header-cell:nth-of-type(3),
 .table-wrapper .jobs-header-cell:nth-of-type(4),
-.table-wrapper .jobs-header-cell:nth-of-type(5) ,
+.table-wrapper .jobs-header-cell:nth-of-type(5),
 .table-wrapper .jobs-cell:nth-of-type(5),
 .table-wrapper .jobs-cell:nth-of-type(4),
 .table-wrapper .jobs-cell:nth-of-type(3) {
   text-align: right;
 }
 
-.table-wrapper rux-table-header-cell:has(rux-icon.visible) .job-table_right-align,
-.table-wrapper rux-table-header-cell:hover .job-table_right-align {
-  grid-template-columns: auto 32px;
-  justify-content: flex-end;
+rux-table-header-cell.jobs-header-cell:has(rux-icon.visible) div.right-align,
+rux-table-header-cell.jobs-header-cell:hover div.right-align {
+  width: fit-content;
+  margin-left: auto;
 }
 
-/* .table-wrapper rux-table-cell.jobs-cell::after {
-  content: '';
-  padding-right: var(--spacing-8);
-} */
+rux-table-header-cell.jobs-header-cell:has(rux-icon.visible) div.right-align span,
+rux-table-header-cell.jobs-header-cell:hover div.right-align span {
+  width: calc(100% - 32px);
+  margin-left: auto;
+}
 
 .table-wrapper .jobs-cell:nth-of-type(1) {
   border-left: transparent 5px solid;
